added the header changes

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   
 }
 
+.tree-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
 #root {
   margin: 0;
   padding: 0;
