--- a/src/index.css
+++ b/src/index.css
@@ -16,21 +16,21 @@ code {
     monospace;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 12px;
   height: 12px;
-}
+} */
 
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
   background: #f1f1f1;
   border-radius: 10px;
-}
+} */
 
-::-webkit-scrollbar-thumb {
+/* ::-webkit-scrollbar-thumb {
   background: #888;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
-}
+} */
