--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,13 @@
   margin: 0;
   padding: 0;
 }
+/* Remove number input spinners */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
